chore: PR comments addressed